# python-web-development-project-lvl4

./: .gitignore  Makefile  README.md  requirements.txt
hexlet-code/: pyproject.toml
hexlet-code/tests/: test_hexlet_code.py
task_manager/: Makefile  Procfile  pyproject.toml
task_manager/task_manager/: asgi.py  forms.py  settings.py  urls.py  views.py  wsgi.py
task_manager/task_manager/locale/en/LC_MESSAGES/: django.mo  django.po
task_manager/task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/task_manager/templates/auth/: user_confirm_delete.html  user_list.html  user_update_form.html
task_manager/task_manager/templates/task_manager/: home.html  index.html  layout.html  login.html  navbar.html  register.html
task_manager/task_manager/templatetags/: task_manager_tags.py
task_manager/templates/task_manager/: index.html  layout.html
