[tool.poetry]
name = "task_manager"
version = "0.1.0"
description = ""
authors = ["Roman Zadorin <zadorinr97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.5"
gunicorn = "^20.1.0"
whitenoise = "^6.1.0"
dj-database-url = "^0.5.0"
django-admin = "^2.0.1"
django-bootstrap4 = "^22.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
